# Cache-Coherence-Sim

./: CMakeLists.txt
locks/: Makefile  aligned_lock  aligned_lock.c  array_lock  array_lock.c  cas_lock  cas_lock.c  template.c  ticket_lock  ticket_lock.c  ts_lock  ts_lock.c  tts_lock  tts_lock.c
src/: Cache.cpp  Cache.h  CacheController.h  CacheSet.cpp  CacheSet.h  Directory.cpp  Directory.h  DirectoryCacheController.cpp  DirectoryCacheController.h  Interconnection.cpp  Interconnection.h  NodeController.h  Request.cpp  Request.h  Response.cpp  Response.h  Simulator.cpp  Simulator.h  SnoopingCacheController.cpp  SnoopingCacheController.h  Statistics.cpp  Statistics.h  TokenCacheController.cpp  TokenCacheController.h  Topo.cpp  Topo.h  main.cpp
tests/: main.cpp
trace/: sample-tts.trace  short_test.trace
